basepath get and add work - local
